--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
         "classnames": "^2.3.2",
+        "firebase": "^9.20.0",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-firebaseui": "^6.0.0",
         "react-responsive-carousel": "^3.2.23",
         "react-router-dom": "^6.10.0",
         "react-scripts": "5.0.1",
